@@ -2,6 +2,10 @@ libtheora 1.0beta3 (unreleased)
 
  - Build new libtheoradec and libtheoraenc libraries
    supporting the new API from theora-exp.
+ - Change granule_frame() to return an index as documented.
+   This is a change of behaviour from 1.0beta1.
+ - Document that granule_time() returns the end of the 
+   presentation interval. 
  - Fix a problem with decoder quantizer initialization
  - Fix a page queue problem with png2theora.
  - Dropped build support for Microsoft VS2003.
